RESOLVED FIXED12349
NativeFileUpload: Button text is not grayed out when the control is disabled
https://bugs.webkit.org/show_bug.cgi?id=12349
Summary NativeFileUpload: Button text is not grayed out when the control is disabled
mitz
Reported 2007-01-20 08:31:43 PST
The text ("Choose File") on the file upload control's button is not grayed out when the control is disabled (see URL).
Attachments
Fix file upload button styling (19.63 KB, patch)
2007-01-21 06:27 PST, mitz
darin: review+
Alexey Proskuryakov
Comment 1 2007-01-21 00:44:21 PST
fast/forms/file-input-disabled.html fails in pixel mode.
mitz
Comment 2 2007-01-21 06:27:18 PST
Created attachment 12582 [details] Fix file upload button styling CSS doesn't allow pseudo-classes on pseudo-elements (and the WebCore implementation doesn't support it either). This is not a problem for the :disabled pseudo-class, but for :active it means that a non-Mac-themed file upload button will appear active when the mouse is pressed anywhere in the file upload control, not just on the button. I don't see a way around this using CSS alone and without creating a real (shadow) element for the button.
Darin Adler
Comment 3 2007-01-21 08:05:34 PST
Comment on attachment 12582 [details] Fix file upload button styling r=me
Sam Weinig
Comment 4 2007-01-21 09:23:33 PST
Landed in r19010.
Mark Rowe (bdash)
Comment 5 2007-01-24 20:18:33 PST
*** Bug 11874 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.