LayoutTests:

Reviewed by Darin.

        - updated results for http://bugs.webkit.org/show_bug.cgi?id=12349
          NativeFileUpload: Button text is not grayed out when the control is disabled

        * fast/forms/file-input-disabled-expected.checksum:
        * fast/forms/file-input-disabled-expected.png:
        * fast/forms/file-input-disabled-expected.txt:

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12349
          NativeFileUpload: Button text is not grayed out when the control is disabled

        Covered by fast/forms/file-input-disabled.html

        * css/html4.css: Changed selectors that had pseudo-classes after the -webkit-file-upload-button
        pseudo-element to have the pseudo-element at the end. Pseudo-elements must be at the end.
        * rendering/RenderFileUploadControl.cpp:
        (WebCore::RenderFileUploadControl::createButtonStyle): Changed to not overwrite the button's
        style with its parent's style. getPseudoStyle() handles inheritance properly.



Canonical link: https://commits.webkit.org/15986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19010 268f45cc-cd09-0410-ab3c-d52691b4dbfc